corrected blockchain banner spacing

--- a/components/TokenPage/BlockchainBanner/blockchainbanner.module.scss
+++ b/components/TokenPage/BlockchainBanner/blockchainbanner.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
-  margin-top: -8rem;
-  margin-bottom: 12rem;
+  margin-top: -14rem;
+  margin-bottom: 4rem;
   position: relative;
 }
 
