--- a/components/TokenPage/HexagonSliderSection/hexagonslidersection.module.scss
+++ b/components/TokenPage/HexagonSliderSection/hexagonslidersection.module.scss
@@ -1,3 +1,7 @@
+.wrapper {
+  padding-top: 4rem;
+}
+
 .wrapper h2 {
   font-size: clamp(2rem, 10vw, 3rem);
   text-align: center;
